5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4153/executions/1800_2573.log
== TEST (2019-06-11 11:56:59) 
-- CODE:
from numpy import *

peso = array(eval(input("Insira o peso: ")))
altura = array(eval(input("Insira a altura: ")))
IMC = zeros(size(peso))
for i in range(size(peso)):
	IMC[i] = peso[i]/(altura[i])**2
print(IMC)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 20:35:59) 
-- CODE:
from numpy import *

peso = array(eval(input("Insira o peso: ")))
altura = array(eval(input("Insira a altura: ")))
IMC = zeros(size(peso))
for i in range(size(peso)):
	IMC[i] = peso[i]/(altura[i])**2
print(IMC)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 20:45:33) 
-- CODE:
from numpy import *

peso = array(eval(input("Insira o peso: ")))
altura = array(eval(input("Insira a altura: ")))
IMC = zeros(size(peso))
for i in range(size(peso)):
	IMC[i] = peso[i]/(altura[i])**2
print(IMC)
print(max(IMC))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 20:53:00) 
-- CODE:
from numpy import *

peso = array(eval(input("Insira o peso: ")))
altura = array(eval(input("Insira a altura: ")))
IMC = zeros(size(peso))
for i in range(size(peso)):
	IMC[i] = round ((peso[i]/(altura[i])**2),2)
print(IMC)
print(max(IMC))
m = max(IMC)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 12:27:59) 
-- CODE:
from numpy import *

peso = array(eval(input("Insira o peso: ")))
altura = array(eval(input("Insira a altura: ")))
IMC = zeros(size(peso))
for i in range(size(peso)):
	IMC[i] = round ((peso[i]/(altura[i])**2),2)
print(IMC)
print(max(IMC))
m = max(IMC)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 12:28:26) 
-- CODE:
from numpy import *

peso = array(eval(input("Insira o peso: ")))
altura = array(eval(input("Insira a altura: ")))
IMC = zeros(size(peso))
for i in range(size(peso)):
	IMC[i] = round ((peso[i]/(altura[i])**2),2)
print(IMC)
print(max(IMC))
m = max(IMC)
-- EXECUTION TIME:
1.07123
-- TEST CASE 1:
---- input:
[64.58,77.85,45.96,55.55]
[1.62,1.84,1.55,1.66]
---- correct output:
[24.61  22.99  19.13  20.16]
O MAIOR IMC DA TURMA EH: 24.61
PESO NORMAL
---- user output:
[24.61 22.99 19.13 20.16]
24.61
-- TEST CASE 2:
---- input:
[34.67,45.78,55.89]
[1.98,1.88,1.79]
---- correct output:
[  8.84  12.95  17.44]
O MAIOR IMC DA TURMA EH: 17.44
ABAIXO DO PESO
---- user output:
[ 8.84 12.95 17.44]
17.44
-- TEST CASE 3:
---- input:
[102.89,99.87]
[1.65,1.77]
---- correct output:
[37.79  31.88]
O MAIOR IMC DA TURMA EH: 37.79
OBESIDADE SEVERA
---- user output:
[37.79 31.88]
37.79
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 12:28:33) 
-- CODE:
from numpy import *

peso = array(eval(input("Insira o peso: ")))
altura = array(eval(input("Insira a altura: ")))
IMC = zeros(size(peso))
for i in range(size(peso)):
	IMC[i] = round ((peso[i]/(altura[i])**2),2)
print(IMC)
print(max(IMC))
m = max(IMC)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 12:28:58) 
-- CODE:
from numpy import *

peso = array(eval(input("Insira o peso: ")))
altura = array(eval(input("Insira a altura: ")))
IMC = zeros(size(peso))
for i in range(size(peso)):
	IMC[i] = round ((peso[i]/(altura[i])**2),2)
print(IMC)
print(max(IMC))
m = max(IMC)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 12:29:55) 
-- CODE:
from numpy import *

peso = array(eval(input("Insira o peso: ")))
altura = array(eval(input("Insira a altura: ")))
IMC = zeros(size(peso))
for i in range(size(peso)):
	IMC[i] = round ((peso[i]/(altura[i])**2),2)
print(IMC)
print(max(IMC))
m = max(IMC)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 12:31:30) 
-- CODE:
from numpy import *

peso = array(eval(input("Insira o peso: ")))
altura = array(eval(input("Insira a altura: ")))
IMC = zeros(size(peso))
for i in range(size(peso)):
	IMC[i] = round ((peso[i]/(altura[i])**2),2)
print(IMC)
print("O MAIOR IMC DA TURMA EH:",max(IMC))
m = max(IMC)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 12:38:14) 
-- CODE:
from numpy import *

peso = array(eval(input("Insira o peso: ")))
altura = array(eval(input("Insira a altura: ")))
IMC = zeros(size(peso))
for i in range(size(peso)):
	IMC[i] = round ((peso[i]/(altura[i])**2),2)
print(IMC)
print("O MAIOR IMC DA TURMA EH:",max(IMC))
m = max(IMC)

if(m < 17):
	msg = "MUITO ABAIXO DO PESO"
elif(m >= 17 and m <= 18.49):
	msg = "ABAIXO DO PESO"
elif(m >= 18.5 and m <= 24.49):
	msg = "PESO NORMAL"
elif(m >= 25 and m <= 29.99):
	msg = "ACIMA DO PESO"
elif(m >= 30 and m <= 34.99):
	msg = "OBESIDADE"
elif(m >= 35 and m <= 39.99):
	msg = "OBESIDADE SEVERA"
elif(M >= 40):
	msg = "OBESIDADE MORBIDA"
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 12:38:47) 
-- CODE:
from numpy import *

peso = array(eval(input("Insira o peso: ")))
altura = array(eval(input("Insira a altura: ")))
IMC = zeros(size(peso))
for i in range(size(peso)):
	IMC[i] = round ((peso[i]/(altura[i])**2),2)
print(IMC)
print("O MAIOR IMC DA TURMA EH:",max(IMC))
m = max(IMC)

if(m < 17):
	msg = "MUITO ABAIXO DO PESO"
elif(m >= 17 and m <= 18.49):
	msg = "ABAIXO DO PESO"
elif(m >= 18.5 and m <= 24.49):
	msg = "PESO NORMAL"
elif(m >= 25 and m <= 29.99):
	msg = "ACIMA DO PESO"
elif(m >= 30 and m <= 34.99):
	msg = "OBESIDADE"
elif(m >= 35 and m <= 39.99):
	msg = "OBESIDADE SEVERA"
elif(M >= 40):
	msg = "OBESIDADE MORBIDA"
print(msg)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 12:39:18) 
-- CODE:
from numpy import *

peso = array(eval(input("Insira o peso: ")))
altura = array(eval(input("Insira a altura: ")))
IMC = zeros(size(peso))
for i in range(size(peso)):
	IMC[i] = round ((peso[i]/(altura[i])**2),2)
print(IMC)
print("O MAIOR IMC DA TURMA EH:",max(IMC))
m = max(IMC)

if(m < 17):
	msg = "MUITO ABAIXO DO PESO"
elif(m >= 17 and m <= 18.49):
	msg = "ABAIXO DO PESO"
elif(m >= 18.5 and m <= 24.49):
	msg = "PESO NORMAL"
elif(m >= 25 and m <= 29.99):
	msg = "ACIMA DO PESO"
elif(m >= 30 and m <= 34.99):
	msg = "OBESIDADE"
elif(m >= 35 and m <= 39.99):
	msg = "OBESIDADE SEVERA"
elif(M >= 40):
	msg = "OBESIDADE MORBIDA"
print(msg)
-- EXECUTION TIME:
0.980505
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1800/2573/main.py", line 24, in <module>
    elif(M >= 40):
NameError: name 'M' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 12:39:43) 
-- CODE:
from numpy import *

peso = array(eval(input("Insira o peso: ")))
altura = array(eval(input("Insira a altura: ")))
IMC = zeros(size(peso))
for i in range(size(peso)):
	IMC[i] = round ((peso[i]/(altura[i])**2),2)
print(IMC)
print("O MAIOR IMC DA TURMA EH:",max(IMC))
m = max(IMC)

if(m < 17):
	msg = "MUITO ABAIXO DO PESO"
elif(m >= 17 and m <= 18.49):
	msg = "ABAIXO DO PESO"
elif(m >= 18.5 and m <= 24.49):
	msg = "PESO NORMAL"
elif(m >= 25 and m <= 29.99):
	msg = "ACIMA DO PESO"
elif(m >= 30 and m <= 34.99):
	msg = "OBESIDADE"
elif(m >= 35 and m <= 39.99):
	msg = "OBESIDADE SEVERA"
elif(M >= 40):
	msg = "OBESIDADE MORBIDA"
print(msg)
-- EXECUTION TIME:
1.27795
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1800/2573/main.py", line 24, in <module>
    elif(M >= 40):
NameError: name 'M' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 12:40:13) 
-- CODE:
from numpy import *

peso = array(eval(input("Insira o peso: ")))
altura = array(eval(input("Insira a altura: ")))
IMC = zeros(size(peso))
for i in range(size(peso)):
	IMC[i] = round ((peso[i]/(altura[i])**2),2)
print(IMC)
print("O MAIOR IMC DA TURMA EH:",max(IMC))
m = max(IMC)

if(m < 17):
	msg = "MUITO ABAIXO DO PESO"
elif(m >= 17 and m <= 18.49):
	msg = "ABAIXO DO PESO"
elif(m >= 18.5 and m <= 24.49):
	msg = "PESO NORMAL"
elif(m >= 25 and m <= 29.99):
	msg = "ACIMA DO PESO"
elif(m >= 30 and m <= 34.99):
	msg = "OBESIDADE"
elif(m >= 35 and m <= 39.99):
	msg = "OBESIDADE SEVERA"
elif(M >= 40):
	msg = "OBESIDADE MORBIDA"
print(msg)
-- EXECUTION TIME:
1.90905
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1800/2573/main.py", line 24, in <module>
    elif(M >= 40):
NameError: name 'M' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 12:40:14) 
-- CODE:
from numpy import *

peso = array(eval(input("Insira o peso: ")))
altura = array(eval(input("Insira a altura: ")))
IMC = zeros(size(peso))
for i in range(size(peso)):
	IMC[i] = round ((peso[i]/(altura[i])**2),2)
print(IMC)
print("O MAIOR IMC DA TURMA EH:",max(IMC))
m = max(IMC)

if(m < 17):
	msg = "MUITO ABAIXO DO PESO"
elif(m >= 17 and m <= 18.49):
	msg = "ABAIXO DO PESO"
elif(m >= 18.5 and m <= 24.49):
	msg = "PESO NORMAL"
elif(m >= 25 and m <= 29.99):
	msg = "ACIMA DO PESO"
elif(m >= 30 and m <= 34.99):
	msg = "OBESIDADE"
elif(m >= 35 and m <= 39.99):
	msg = "OBESIDADE SEVERA"
elif(M >= 40):
	msg = "OBESIDADE MORBIDA"
print(msg)
-- EXECUTION TIME:
4.11415
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1800/2573/main.py", line 24, in <module>
    elif(M >= 40):
NameError: name 'M' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 12:40:14) 
-- CODE:
from numpy import *

peso = array(eval(input("Insira o peso: ")))
altura = array(eval(input("Insira a altura: ")))
IMC = zeros(size(peso))
for i in range(size(peso)):
	IMC[i] = round ((peso[i]/(altura[i])**2),2)
print(IMC)
print("O MAIOR IMC DA TURMA EH:",max(IMC))
m = max(IMC)

if(m < 17):
	msg = "MUITO ABAIXO DO PESO"
elif(m >= 17 and m <= 18.49):
	msg = "ABAIXO DO PESO"
elif(m >= 18.5 and m <= 24.49):
	msg = "PESO NORMAL"
elif(m >= 25 and m <= 29.99):
	msg = "ACIMA DO PESO"
elif(m >= 30 and m <= 34.99):
	msg = "OBESIDADE"
elif(m >= 35 and m <= 39.99):
	msg = "OBESIDADE SEVERA"
elif(M >= 40):
	msg = "OBESIDADE MORBIDA"
print(msg)
-- EXECUTION TIME:
6.34574
-- TEST CASE 1:
---- input:
[64.58,77.85,45.96,55.55]
[1.62,1.84,1.55,1.66]
---- correct output:
[24.61  22.99  19.13  20.16]
O MAIOR IMC DA TURMA EH: 24.61
PESO NORMAL
---- user output:
[ 8.84 12.95 17.44]
O MAIOR IMC DA TURMA EH: 17.44
ABAIXO DO PESO
-- TEST CASE 2:
---- input:
[34.67,45.78,55.89]
[1.98,1.88,1.79]
---- correct output:
[  8.84  12.95  17.44]
O MAIOR IMC DA TURMA EH: 17.44
ABAIXO DO PESO
---- user output:
[ 8.84 12.95 17.44]
O MAIOR IMC DA TURMA EH: 17.44
ABAIXO DO PESO
-- TEST CASE 3:
---- input:
[102.89,99.87]
[1.65,1.77]
---- correct output:
[37.79  31.88]
O MAIOR IMC DA TURMA EH: 37.79
OBESIDADE SEVERA
---- user output:
[37.79 31.88]
O MAIOR IMC DA TURMA EH: 37.79
OBESIDADE SEVERA
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 12:40:14) 
-- CODE:
from numpy import *

peso = array(eval(input("Insira o peso: ")))
altura = array(eval(input("Insira a altura: ")))
IMC = zeros(size(peso))
for i in range(size(peso)):
	IMC[i] = round ((peso[i]/(altura[i])**2),2)
print(IMC)
print("O MAIOR IMC DA TURMA EH:",max(IMC))
m = max(IMC)

if(m < 17):
	msg = "MUITO ABAIXO DO PESO"
elif(m >= 17 and m <= 18.49):
	msg = "ABAIXO DO PESO"
elif(m >= 18.5 and m <= 24.49):
	msg = "PESO NORMAL"
elif(m >= 25 and m <= 29.99):
	msg = "ACIMA DO PESO"
elif(m >= 30 and m <= 34.99):
	msg = "OBESIDADE"
elif(m >= 35 and m <= 39.99):
	msg = "OBESIDADE SEVERA"
elif(M >= 40):
	msg = "OBESIDADE MORBIDA"
print(msg)
-- EXECUTION TIME:
8.20489
-- TEST CASE 1:
---- input:
[64.58,77.85,45.96,55.55]
[1.62,1.84,1.55,1.66]
---- correct output:
[24.61  22.99  19.13  20.16]
O MAIOR IMC DA TURMA EH: 24.61
PESO NORMAL
---- user output:
[ 8.84 12.95 17.44]
O MAIOR IMC DA TURMA EH: 17.44
ABAIXO DO PESO
-- TEST CASE 2:
---- input:
[34.67,45.78,55.89]
[1.98,1.88,1.79]
---- correct output:
[  8.84  12.95  17.44]
O MAIOR IMC DA TURMA EH: 17.44
ABAIXO DO PESO
---- user output:
[ 8.84 12.95 17.44]
O MAIOR IMC DA TURMA EH: 17.44
ABAIXO DO PESO
-- TEST CASE 3:
---- input:
[102.89,99.87]
[1.65,1.77]
---- correct output:
[37.79  31.88]
O MAIOR IMC DA TURMA EH: 37.79
OBESIDADE SEVERA
---- user output:
[37.79 31.88]
O MAIOR IMC DA TURMA EH: 37.79
OBESIDADE SEVERA
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 12:40:14) 
-- CODE:
from numpy import *

peso = array(eval(input("Insira o peso: ")))
altura = array(eval(input("Insira a altura: ")))
IMC = zeros(size(peso))
for i in range(size(peso)):
	IMC[i] = round ((peso[i]/(altura[i])**2),2)
print(IMC)
print("O MAIOR IMC DA TURMA EH:",max(IMC))
m = max(IMC)

if(m < 17):
	msg = "MUITO ABAIXO DO PESO"
elif(m >= 17 and m <= 18.49):
	msg = "ABAIXO DO PESO"
elif(m >= 18.5 and m <= 24.49):
	msg = "PESO NORMAL"
elif(m >= 25 and m <= 29.99):
	msg = "ACIMA DO PESO"
elif(m >= 30 and m <= 34.99):
	msg = "OBESIDADE"
elif(m >= 35 and m <= 39.99):
	msg = "OBESIDADE SEVERA"
elif(M >= 40):
	msg = "OBESIDADE MORBIDA"
print(msg)
-- EXECUTION TIME:
9.16761
-- TEST CASE 1:
---- input:
[64.58,77.85,45.96,55.55]
[1.62,1.84,1.55,1.66]
---- correct output:
[24.61  22.99  19.13  20.16]
O MAIOR IMC DA TURMA EH: 24.61
PESO NORMAL
---- user output:
[ 8.84 12.95 17.44]
O MAIOR IMC DA TURMA EH: 17.44
ABAIXO DO PESO
-- TEST CASE 2:
---- input:
[34.67,45.78,55.89]
[1.98,1.88,1.79]
---- correct output:
[  8.84  12.95  17.44]
O MAIOR IMC DA TURMA EH: 17.44
ABAIXO DO PESO
---- user output:
[ 8.84 12.95 17.44]
O MAIOR IMC DA TURMA EH: 17.44
ABAIXO DO PESO
-- TEST CASE 3:
---- input:
[102.89,99.87]
[1.65,1.77]
---- correct output:
[37.79  31.88]
O MAIOR IMC DA TURMA EH: 37.79
OBESIDADE SEVERA
---- user output:
[37.79 31.88]
O MAIOR IMC DA TURMA EH: 37.79
OBESIDADE SEVERA
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 12:40:14) 
-- CODE:
from numpy import *

peso = array(eval(input("Insira o peso: ")))
altura = array(eval(input("Insira a altura: ")))
IMC = zeros(size(peso))
for i in range(size(peso)):
	IMC[i] = round ((peso[i]/(altura[i])**2),2)
print(IMC)
print("O MAIOR IMC DA TURMA EH:",max(IMC))
m = max(IMC)

if(m < 17):
	msg = "MUITO ABAIXO DO PESO"
elif(m >= 17 and m <= 18.49):
	msg = "ABAIXO DO PESO"
elif(m >= 18.5 and m <= 24.49):
	msg = "PESO NORMAL"
elif(m >= 25 and m <= 29.99):
	msg = "ACIMA DO PESO"
elif(m >= 30 and m <= 34.99):
	msg = "OBESIDADE"
elif(m >= 35 and m <= 39.99):
	msg = "OBESIDADE SEVERA"
elif(M >= 40):
	msg = "OBESIDADE MORBIDA"
print(msg)
-- EXECUTION TIME:
10.071
-- TEST CASE 1:
---- input:
[64.58,77.85,45.96,55.55]
[1.62,1.84,1.55,1.66]
---- correct output:
[24.61  22.99  19.13  20.16]
O MAIOR IMC DA TURMA EH: 24.61
PESO NORMAL
---- user output:
[ 8.84 12.95 17.44]
O MAIOR IMC DA TURMA EH: 17.44
ABAIXO DO PESO
-- TEST CASE 2:
---- input:
[34.67,45.78,55.89]
[1.98,1.88,1.79]
---- correct output:
[  8.84  12.95  17.44]
O MAIOR IMC DA TURMA EH: 17.44
ABAIXO DO PESO
---- user output:
[37.79 31.88]
O MAIOR IMC DA TURMA EH: 37.79
OBESIDADE SEVERA
-- TEST CASE 3:
---- input:
[102.89,99.87]
[1.65,1.77]
---- correct output:
[37.79  31.88]
O MAIOR IMC DA TURMA EH: 37.79
OBESIDADE SEVERA
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 12:40:23) 
-- CODE:
from numpy import *

peso = array(eval(input("Insira o peso: ")))
altura = array(eval(input("Insira a altura: ")))
IMC = zeros(size(peso))
for i in range(size(peso)):
	IMC[i] = round ((peso[i]/(altura[i])**2),2)
print(IMC)
print("O MAIOR IMC DA TURMA EH:",max(IMC))
m = max(IMC)

if(m < 17):
	msg = "MUITO ABAIXO DO PESO"
elif(m >= 17 and m <= 18.49):
	msg = "ABAIXO DO PESO"
elif(m >= 18.5 and m <= 24.49):
	msg = "PESO NORMAL"
elif(m >= 25 and m <= 29.99):
	msg = "ACIMA DO PESO"
elif(m >= 30 and m <= 34.99):
	msg = "OBESIDADE"
elif(m >= 35 and m <= 39.99):
	msg = "OBESIDADE SEVERA"
elif(M >= 40):
	msg = "OBESIDADE MORBIDA"
print(msg)
-- EXECUTION TIME:
1.21965
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1800/2573/main.py", line 24, in <module>
    elif(M >= 40):
NameError: name 'M' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 12:40:47) 
-- CODE:
from numpy import *

peso = array(eval(input("Insira o peso: ")))
altura = array(eval(input("Insira a altura: ")))
IMC = zeros(size(peso))
for i in range(size(peso)):
	IMC[i] = round ((peso[i]/(altura[i])**2),2)
print(IMC)
print("O MAIOR IMC DA TURMA EH:",max(IMC))
m = max(IMC)
if(m < 17):
	msg = "MUITO ABAIXO DO PESO"
elif(m >= 17 and m <= 18.49):
	msg = "ABAIXO DO PESO"
elif(m >= 18.5 and m <= 24.49):
	msg = "PESO NORMAL"
elif(m >= 25 and m <= 29.99):
	msg = "ACIMA DO PESO"
elif(m >= 30 and m <= 34.99):
	msg = "OBESIDADE"
elif(m >= 35 and m <= 39.99):
	msg = "OBESIDADE SEVERA"
elif(M >= 40):
	msg = "OBESIDADE MORBIDA"
print(msg)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 12:42:16) 
-- CODE:
from numpy import *

peso = array(eval(input("Insira o peso: ")))
altura = array(eval(input("Insira a altura: ")))
IMC = zeros(size(peso))
for i in range(size(peso)):
	IMC[i] = round ((peso[i]/(altura[i])**2),2)
print(IMC)
print("O MAIOR IMC DA TURMA EH:",max(IMC))
m = max(IMC)
if(m < 17):
	msg = "MUITO ABAIXO DO PESO"
elif(m >= 17 and m <= 18.49):
	msg = "ABAIXO DO PESO"
elif(m >= 18.5 and m <= 24.49):
	msg = "PESO NORMAL"
elif(m >= 25 and m <= 29.99):
	msg = "ACIMA DO PESO"
elif(m >= 30 and m <= 34.99):
	msg = "OBESIDADE"
elif(m >= 35 and m <= 39.99):
	msg = "OBESIDADE SEVERA"
elif(M >= 40):
	msg = "OBESIDADE MORBIDA"
print(msg)
-- EXECUTION TIME:
0.879919
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1800/2573/main.py", line 23, in <module>
    elif(M >= 40):
NameError: name 'M' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 12:43:04) 
-- CODE:
from numpy import *

peso = array(eval(input("Insira o peso: ")))
altura = array(eval(input("Insira a altura: ")))
IMC = zeros(size(peso))
for i in range(size(peso)):
	IMC[i] = round ((peso[i]/(altura[i])**2),2)
print(IMC)
print("O MAIOR IMC DA TURMA EH:",max(IMC))
m = max(IMC)
if(m < 17):
	msg = "MUITO ABAIXO DO PESO"
elif(m >= 17 and m < 18.5):
	msg = "ABAIXO DO PESO"
elif(m >= 18.5 and m < 24.5):
	msg = "PESO NORMAL"
elif(m >= 25 and m < 30):
	msg = "ACIMA DO PESO"
elif(m >= 30 and m < 35):
	msg = "OBESIDADE"
elif(m >= 35 and m < 40):
	msg = "OBESIDADE SEVERA"
elif(m >= 40):
	msg = "OBESIDADE MORBIDA"
print(msg)
-- EXECUTION TIME:
1.18955
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1800/2573/main.py", line 25, in <module>
    print(msg)
NameError: name 'msg' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 12:43:20) 
-- CODE:
from numpy import *

peso = array(eval(input("Insira o peso: ")))
altura = array(eval(input("Insira a altura: ")))
IMC = zeros(size(peso))
for i in range(size(peso)):
	IMC[i] = round ((peso[i]/(altura[i])**2),2)
print(IMC)
print("O MAIOR IMC DA TURMA EH:",max(IMC))
m = max(IMC)
if(m < 17):
	msg = "MUITO ABAIXO DO PESO"
elif(m >= 17 and m < 18.5):
	msg = "ABAIXO DO PESO"
elif(m >= 18.5 and m < 24.5):
	msg = "PESO NORMAL"
elif(m >= 25 and m < 30):
	msg = "ACIMA DO PESO"
elif(m >= 30 and m < 35):
	msg = "OBESIDADE"
elif(m >= 35 and m < 40):
	msg = "OBESIDADE SEVERA"
elif(m >= 40):
	msg = "OBESIDADE MORBIDA"
print(msg)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 12:43:52) 
-- CODE:
from numpy import *

peso = array(eval(input("Insira o peso: ")))
altura = array(eval(input("Insira a altura: ")))
IMC = zeros(size(peso))
for i in range(size(peso)):
	IMC[i] = round ((peso[i]/(altura[i])**2),2)
print(IMC)
print("O MAIOR IMC DA TURMA EH:",max(IMC))
m = max(IMC)
if(m < 17):
	msg = "MUITO ABAIXO DO PESO"
elif(m >= 17 and m < 18.5):
	msg = "ABAIXO DO PESO"
elif(m >= 18.5 and m < 24.5):
	msg = "PESO NORMAL"
elif(m >= 25 and m < 30):
	msg = "ACIMA DO PESO"
elif(m >= 30 and m < 35):
	msg = "OBESIDADE"
elif(m >= 35 and m < 40):
	msg = "OBESIDADE SEVERA"
elif(m >= 40):
	msg = "OBESIDADE MORBIDA"
print(msg)
-- EXECUTION TIME:
1.20064
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1800/2573/main.py", line 25, in <module>
    print(msg)
NameError: name 'msg' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 12:44:41) 
-- CODE:
from numpy import *

peso = array(eval(input("Insira o peso: ")))
altura = array(eval(input("Insira a altura: ")))
IMC = zeros(size(peso))
for i in range(size(peso)):
	IMC[i] = round ((peso[i]/(altura[i])**2),2)
print(IMC)
print("O MAIOR IMC DA TURMA EH:",max(IMC))
m = max(IMC)
if(m < 17):
	msg = "MUITO ABAIXO DO PESO"
elif(m >= 17 and m <= 18.49):
	msg = "ABAIXO DO PESO"
elif(m >= 18.5 and m <= 24.99):
	msg = "PESO NORMAL"
elif(m >= 25 and m < 29.99):
	msg = "ACIMA DO PESO"
elif(m >= 30 and m < 34.99):
	msg = "OBESIDADE"
elif(m >= 35 and m < 39.99):
	msg = "OBESIDADE SEVERA"
elif(m >= 40):
	msg = "OBESIDADE MORBIDA"
print(msg)
-- EXECUTION TIME:
1.00369
-- TEST CASE 1:
---- input:
[64.58,77.85,45.96,55.55]
[1.62,1.84,1.55,1.66]
---- correct output:
[24.61  22.99  19.13  20.16]
O MAIOR IMC DA TURMA EH: 24.61
PESO NORMAL
---- user output:
[24.61 22.99 19.13 20.16]
O MAIOR IMC DA TURMA EH: 24.61
PESO NORMAL
-- TEST CASE 2:
---- input:
[34.67,45.78,55.89]
[1.98,1.88,1.79]
---- correct output:
[  8.84  12.95  17.44]
O MAIOR IMC DA TURMA EH: 17.44
ABAIXO DO PESO
---- user output:
Insira o peso: Insira a altura: [ 8.84 12.95 17.44]
O MAIOR IMC DA TURMA EH: 17.44
ABAIXO DO PESO
-- TEST CASE 3:
---- input:
[102.89,99.87]
[1.65,1.77]
---- correct output:
[37.79  31.88]
O MAIOR IMC DA TURMA EH: 37.79
OBESIDADE SEVERA
---- user output:
Insira o peso: Insira a altura: [37.79 31.88]
O MAIOR IMC DA TURMA EH: 37.79
OBESIDADE SEVERA
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 12:44:51) 
-- CODE:
from numpy import *

peso = array(eval(input("Insira o peso: ")))
altura = array(eval(input("Insira a altura: ")))
IMC = zeros(size(peso))
for i in range(size(peso)):
	IMC[i] = round ((peso[i]/(altura[i])**2),2)
print(IMC)
print("O MAIOR IMC DA TURMA EH:",max(IMC))
m = max(IMC)
if(m < 17):
	msg = "MUITO ABAIXO DO PESO"
elif(m >= 17 and m <= 18.49):
	msg = "ABAIXO DO PESO"
elif(m >= 18.5 and m <= 24.99):
	msg = "PESO NORMAL"
elif(m >= 25 and m < 29.99):
	msg = "ACIMA DO PESO"
elif(m >= 30 and m < 34.99):
	msg = "OBESIDADE"
elif(m >= 35 and m < 39.99):
	msg = "OBESIDADE SEVERA"
elif(m >= 40):
	msg = "OBESIDADE MORBIDA"
print(msg)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 12:47:20) 
-- CODE:
from numpy import *

peso = array(eval(input("Insira o peso: ")))
altura = array(eval(input("Insira a altura: ")))
IMC = zeros(size(peso))
for i in range(size(peso)):
	IMC[i] = round ((peso[i]/(altura[i])**2),2)
print(IMC)
print("O MAIOR IMC DA TURMA EH:",max(IMC))
m = max(IMC)
if(m < 17):
	print("MUITO ABAIXO DO PESO")
elif(m >= 17 and m <= 18.49):
	print("ABAIXO DO PESO")
elif(m >= 18.5 and m <= 24.99):
	print("PESO NORMAL")
elif(m >= 25 and m < 29.99):
	print("ACIMA DO PESO")
elif(m >= 30 and m < 34.99):
	print("OBESIDADE")
elif(m >= 35 and m < 39.99):
	print("OBESIDADE SEVERA")
elif(m >= 40):
	print("OBESIDADE MORBIDA")
-- EXECUTION TIME:
1.03508
-- TEST CASE 1:
---- input:
[64.58,77.85,45.96,55.55]
[1.62,1.84,1.55,1.66]
---- correct output:
[24.61  22.99  19.13  20.16]
O MAIOR IMC DA TURMA EH: 24.61
PESO NORMAL
---- user output:
[24.61 22.99 19.13 20.16]
O MAIOR IMC DA TURMA EH: 24.61
PESO NORMAL
-- TEST CASE 2:
---- input:
[34.67,45.78,55.89]
[1.98,1.88,1.79]
---- correct output:
[  8.84  12.95  17.44]
O MAIOR IMC DA TURMA EH: 17.44
ABAIXO DO PESO
---- user output:
[ 8.84 12.95 17.44]
O MAIOR IMC DA TURMA EH: 17.44
ABAIXO DO PESO
-- TEST CASE 3:
---- input:
[102.89,99.87]
[1.65,1.77]
---- correct output:
[37.79  31.88]
O MAIOR IMC DA TURMA EH: 37.79
OBESIDADE SEVERA
---- user output:
Insira o peso: Insira a altura: [37.79 31.88]
O MAIOR IMC DA TURMA EH: 37.79
OBESIDADE SEVERA
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 12:47:30) 
-- CODE:
from numpy import *

peso = array(eval(input("Insira o peso: ")))
altura = array(eval(input("Insira a altura: ")))
IMC = zeros(size(peso))
for i in range(size(peso)):
	IMC[i] = round ((peso[i]/(altura[i])**2),2)
print(IMC)
print("O MAIOR IMC DA TURMA EH:",max(IMC))
m = max(IMC)
if(m < 17):
	print("MUITO ABAIXO DO PESO")
elif(m >= 17 and m <= 18.49):
	print("ABAIXO DO PESO")
elif(m >= 18.5 and m <= 24.99):
	print("PESO NORMAL")
elif(m >= 25 and m < 29.99):
	print("ACIMA DO PESO")
elif(m >= 30 and m < 34.99):
	print("OBESIDADE")
elif(m >= 35 and m < 39.99):
	print("OBESIDADE SEVERA")
elif(m >= 40):
	print("OBESIDADE MORBIDA")
-- EXECUTION TIME:
1.03706
-- TEST CASE 1:
---- input:
[64.58,77.85,45.96,55.55]
[1.62,1.84,1.55,1.66]
---- correct output:
[24.61  22.99  19.13  20.16]
O MAIOR IMC DA TURMA EH: 24.61
PESO NORMAL
---- user output:
[24.61 22.99 19.13 20.16]
O MAIOR IMC DA TURMA EH: 24.61
PESO NORMAL
-- TEST CASE 2:
---- input:
[34.67,45.78,55.89]
[1.98,1.88,1.79]
---- correct output:
[  8.84  12.95  17.44]
O MAIOR IMC DA TURMA EH: 17.44
ABAIXO DO PESO
---- user output:
[ 8.84 12.95 17.44]
O MAIOR IMC DA TURMA EH: 17.44
ABAIXO DO PESO
-- TEST CASE 3:
---- input:
[102.89,99.87]
[1.65,1.77]
---- correct output:
[37.79  31.88]
O MAIOR IMC DA TURMA EH: 37.79
OBESIDADE SEVERA
---- user output:
[37.79 31.88]
O MAIOR IMC DA TURMA EH: 37.79
OBESIDADE SEVERA
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
